[tool.poetry]
name = "streaming-vc-test"
version = "0.1.0"
description = ""
authors = ["ORITO Itsuki <me@orito-itsuki.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.10.9"
jiwer = "^2.5.1"
joblib = "^1.2.0"
librosa = "^0.9.2"
numpy = "<1.24"
onnx = "^1.13.0"
onnxsim = "^0.4.10"
PySoundFile = "^0.9.0.post1"
tensorboard = "^2.11.0"

[tool.poetry.dependencies.convmelspec]
git = "https://github.com/adobe-research/convmelspec"
branch = "main"

[[tool.poetry.dependencies.torch]]
platform = "win32"
url = "https://download.pytorch.org/whl/cu117/torch-1.13.1%2Bcu117-cp310-cp310-win_amd64.whl"

[[tool.poetry.dependencies.torch]]
platform = "linux"
url = "https://download.pytorch.org/whl/cu117/torch-1.13.1%2Bcu117-cp310-cp310-linux_x86_64.whl"

[[tool.poetry.dependencies.torchaudio]]
platform = "win32"
url = "https://download.pytorch.org/whl/cu117/torchaudio-0.13.1%2Bcu117-cp310-cp310-win_amd64.whl"

[[tool.poetry.dependencies.torchaudio]]
platform = "linux"
url = "https://download.pytorch.org/whl/cu117/torchaudio-0.13.1%2Bcu117-cp310-cp310-linux_x86_64.whl"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
pyproject-flake8 = "^6.0.0.post1"

[tool.black]
target-version = ['py310']
line-length = 88

[tool.flake8]
max-line-length = 88
max-complexity = 10

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
